force-app/main/default/objects/MS_Teams_Setting__c/MS_Teams_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>MS Teams Setting</label>
</CustomObject>