force-app/main/default/objects/MS_Teams_Setting__c/fields/Sync_Attendance__c.field-meta.xml
<CustomField><fullName>Sync_Attendance__c</fullName><defaultValue>true</defaultValue><label>Sync Attendance</label><type>Checkbox</type></CustomField>