force-app/main/default/objects/MS_Teams_Setting__c/fields/Sync_Meetings__c.field-meta.xml
<CustomField><fullName>Sync_Meetings__c</fullName><defaultValue>true</defaultValue><label>Sync Meetings</label><type>Checkbox</type></CustomField>