force-app/main/default/objects/MS_Teams_Setting__c/fields/Sync_Recordings__c.field-meta.xml
<CustomField><fullName>Sync_Recordings__c</fullName><defaultValue>true</defaultValue><label>Sync Recordings</label><type>Checkbox</type></CustomField>