force-app/main/default/objects/MS_Teams_Setting__c/fields/Sync_Transcripts__c.field-meta.xml
<CustomField><fullName>Sync_Transcripts__c</fullName><defaultValue>true</defaultValue><label>Sync Transcripts</label><type>Checkbox</type></CustomField>