force-app/main/default/objects/MS_Teams_Setting__c/fields/Sync_Window_Days__c.field-meta.xml
<CustomField><fullName>Sync_Window_Days__c</fullName><defaultValue>90</defaultValue><label>Sync Window Days</label><precision>3</precision><scale>0</scale><type>Number</type></CustomField>